hankesivu styles modified

--- a/source/_patterns/04-pages/04-hankesivu-read-mode.mustache
+++ b/source/_patterns/04-pages/04-hankesivu-read-mode.mustache
@@ -1,20 +1,20 @@
 <div class="page otakantaa" id="page">
   {{> organisms-header }}
   <section role="main" class="show-hanke-form">
-    <div>
-      <div>
-        <div class="hanke-img-container">
-          <img src="../../images/fpo_16x9.png" alt="Taustakuva" class="hanke-bg" />
-          <img src="../../images/fpo_avatar.png" alt="Logo" class="hanke-logo" />
-        </div>
-        <h1 class="hanke-title">Hankkeen nimi Lorem ipsum dolor sit met</h1>
+    <div class="hanke-img-container">
+      <img src="../../images/fpo_16x9.png" alt="Taustakuva" class="hanke-bg" />
+      <div class="logo-container">
+        <img src="../../images/fpo_avatar.png" alt="Logo" class="hanke-logo" />
       </div>
-      <div class="admin-tools">
-        <input class="btn" type="submit" value="Muokkaa perustietoja" />
-        <input class="btn" type="submit" value="Kirjoita yhteenveto" />
-        <input class="btn" type="submit" value="Lisää kieliversio" />
-        <input class="btn" type="submit" value="Osallistumisraportti" />
-      </div>
+    </div>
+    <div class="hanke-title">
+      <h1>Hankkeen nimi Lorem ipsum dolor sit amet,consectetur adipiscing elit. Donec eget elementum nibh</h1>
+    </div>
+    <div class="admin-tools">
+      <input class="btn" type="submit" value="Muokkaa perustietoja" />
+      <input class="btn" type="submit" value="Kirjoita yhteenveto" />
+      <input class="btn" type="submit" value="Lisää kieliversio" />
+      <input class="btn" type="submit" value="Osallistumisraportti" />
     </div>
     <div class="g">
       <div class="g-2up">
