--- a/source/css/style.css
+++ b/source/css/style.css
@@ -3100,91 +3100,94 @@ td {
 }
 
 .hanke-img-container {
+  width: 100%;
   max-width: 1200px;
   min-width: 350px;
-  max-height: 750px;
+  max-height: 700px;
   min-height: 175px;
   position: relative;
-}
-.hanke-img-container .hanke-bg {
-  width: 100%;
-  height: 100%;
-}
-.hanke-img-container .hanke-logo {
-  position: absolute;
-  left: auto;
-  margin-left: 1em;
-  bottom: -2em;
-  width: 5em;
-  height: 5em;
-}
-@media screen and (min-width: 48em) {
-  .hanke-img-container .hanke-logo {
-    width: 8em;
-    height: 8em;
-    margin-left: 3em;
-    bottom: -3em;
-  }
-}
-@media screen and (min-width: 60em) {
-  .hanke-img-container .hanke-logo {
-    width: 10em;
-    height: 10em;
-    margin-left: 3em;
-    bottom: -3em;
-  }
+  margin-bottom: 1em;
 }
 .hanke-img-container .edit-bg {
   position: absolute;
-  bottom: 1.2em;
+  bottom: 1em;
   right: 1em;
 }
-.hanke-img-container .edit-logo {
+.hanke-img-container .logo-container {
+  position: absolute;
+  width: 12em;
+  margin-left: 1em;
+  bottom: 1em;
+}
+@media screen and (min-width: 48em) {
+  .hanke-img-container .logo-container {
+    margin-left: 3em;
+    bottom: 3em;
+  }
+}
+@media screen and (min-width: 60em) {
+  .hanke-img-container .logo-container {
+    margin-left: 3em;
+    bottom: -8em;
+  }
+}
+.hanke-img-container .logo-container input.edit-logo {
+  position: absolute;
+  text-align: center;
+  bottom: 1em;
+  left: 1em;
+}
+.hanke-img-container .logo-container .edit-logo {
   position: absolute;
   bottom: -2em;
   left: 6em;
 }
 @media screen and (min-width: 48em) {
-  .hanke-img-container .edit-logo {
+  .hanke-img-container .logo-container .edit-logo {
     bottom: -3em;
     left: 3em;
   }
 }
-
-.edit-hanke-form .hanke-title {
-  margin-top: 3em;
+.hanke-img-container .logo-container img.hanke-logo {
+  max-width: 100px;
+  max-height: 100px;
 }
 @media screen and (min-width: 48em) {
-  .edit-hanke-form .hanke-title {
-    margin-left: 12em;
-    margin-top: 0.1em;
+  .hanke-img-container .logo-container img.hanke-logo {
+    max-width: 150px;
+    max-height: 150px;
   }
 }
 @media screen and (min-width: 60em) {
-  .edit-hanke-form .hanke-title {
-    margin-left: 14em;
-    margin-top: 0.1em;
+  .hanke-img-container .logo-container img.hanke-logo {
+    max-width: 300px;
+    max-height: 300px;
   }
 }
 
-.show-hanke-form .hanke-title {
-  margin-top: 1em;
-}
-@media screen and (min-width: 48em) {
-  .show-hanke-form .hanke-title {
-    margin-left: 6em;
-    margin-top: 0.1em;
-  }
+.hanke-title {
+  width: 100%;
+  text-align: left;
 }
 @media screen and (min-width: 60em) {
-  .show-hanke-form .hanke-title {
-    margin-left: 7em;
-    margin-top: 0.1em;
+  .hanke-title {
+    padding-left: 23em;
   }
 }
 
 .admin-tools {
   text-align: left;
+}
+@media screen and (min-width: 60em) {
+  .admin-tools {
+    padding-top: 1em;
+  }
+}
+
+@media screen and (min-width: 60em) {
+  .hanke-form {
+    margin-top: 3em;
+  }
 }
 
 .project-search .block-element {
