--- a/source/css/scss/objects/_icons.scss
+++ b/source/css/scss/objects/_icons.scss
@@ -1,9 +1,9 @@
 
 @font-face {
 	font-family: ok-icons;
-	src:url("../fonts/otakantaa-icon-set.eot");
-	src:url("../fonts/otakantaa-icon-set.eot#iefix") format('embedded-opentype'),
-		url("../fonts/otakantaa-icon-set.ttf") format('truetype');
+	src:url("../fonts/Democracy_Glyphs_1.042.eot");
+	src:url("../fonts/Democracy_Glyphs_1.042.eot#iefix") format('embedded-opentype'),
+		url("../fonts/Democracy_Glyphs_1.042.ttf") format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
