--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2195,8 +2195,8 @@ td {
 \*------------------------------------*/
 @font-face {
   font-family: ok-icons;
-  src: url("../fonts/otakantaa-icon-set.eot");
-  src: url("../fonts/otakantaa-icon-set.eot#iefix") format("embedded-opentype"), url("../fonts/otakantaa-icon-set.ttf") format("truetype");
+  src: url("../fonts/Democracy_Glyphs_1.042.eot");
+  src: url("../fonts/Democracy_Glyphs_1.042.eot#iefix") format("embedded-opentype"), url("../fonts/Democracy_Glyphs_1.042.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
