Button margin fix in hankepage

--- a/source/css/scss/objects/_blocks.scss
+++ b/source/css/scss/objects/_blocks.scss
@@ -108,7 +108,12 @@
 	@media #{$laptop} {
 		padding-top: 1em;
 	}
+
+	input {
+		margin: 0.1em 0;
+	}
 }
+
 .hanke-form {
 	@media #{$laptop} {
 		margin-top: 3em;
