--- a/source/css/scss/generic/_variables.scss
+++ b/source/css/scss/generic/_variables.scss
@@ -62,6 +62,7 @@ $pad-and-half : $pad*1.5;
 $pad-double : $pad*2;
 $pad-half : $pad/2;
 $pad-quarter :$pad/4;
+$pad-three-quarter : $pad*0.75;
 
 //Borders
 $border-med: 3px;
