--- a/source/css/style.css
+++ b/source/css/style.css
@@ -997,9 +997,8 @@ td {
   }
 }
 .header {
-  background: white;
   position: relative;
-  padding: 0;
+  padding: 0 0.5em;
 }
 .header .element-group {
   width: 100%;
@@ -1050,6 +1049,8 @@ td {
 }
 .header .responsive-modifier-block {
   position: static;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 @media screen and (min-width: 48em) {
   .header .responsive-modifier-block {
@@ -1086,6 +1087,10 @@ td {
 }
 .header .search-form .search-field {
   padding-right: 2em;
+}
+
+.header-wrapper {
+  background: none repeat scroll 0% 0% white;
 }
 
 .header-logo {
@@ -2628,10 +2633,11 @@ td {
 .carousel-control.right {
   text-indent: 4px;
   left: auto;
-  right: 15px;
+  right: 12px;
 }
 .carousel-control.left {
   text-indent: -2px;
+  left: 12px;
 }
 .carousel-control:hover, .carousel-control:focus {
   color: #FFFFFF;
@@ -2674,7 +2680,7 @@ td {
   background: none repeat scroll 0 0 rgba(0, 0, 0, 0.75);
   bottom: 0;
   left: 0;
-  padding: 15px;
+  padding: 15px 12px;
   position: absolute;
   right: 0;
   text-align: left;
