--- a/source/css/scss/objects/_carousels.scss
+++ b/source/css/scss/objects/_carousels.scss
@@ -141,7 +141,7 @@
 .carousel-indicators
 {
 	list-style: none outside none;
-	margin: -25px auto 0;
+	margin: -30px auto 0;
 	position: relative;
 	z-index: 5;
 	height: 10px;
@@ -150,19 +150,30 @@
 	background-color: transparent;
 	text-align: center;
 
+	@media #{$laptop} {			
+		margin: -25px auto 0;
+	}
+		
 	li
 	{
 		background-color: rgba(255, 255, 255, 0.25);
-		border-radius: 5px;
+		border-radius: 15px;
 		display: inline-block;
 		cursor: pointer;
 		float: none;
-		height: 10px;
+		height: 24px;
 		text-indent: -999px;
-		width: 10px;
-		margin: 0 1px;
+		width: 24px;
+		margin: 0 5px;
 		-webkit-box-shadow: 0 0 3px 1px rgba(0,0,0,.2);
 		box-shadow: 0 0 3px 1px rgba(0,0,0,.2);
+		
+		@media #{$laptop} {			
+			border-radius: 5px;			
+			height: 10px;
+			width: 10px;
+			margin: 0 1px;
+		}
 	}
 
 	.active
@@ -198,7 +209,10 @@
 
 	p
 	{
-		margin-bottom: 0;
+		margin-bottom: 15px;
+		@media #{$laptop} {	
+			margin-bottom: 8px;
+		}
 	}
 }
 
