--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2647,7 +2647,7 @@ td {
 
 .carousel-indicators {
   list-style: none outside none;
-  margin: -25px auto 0;
+  margin: -30px auto 0;
   position: relative;
   z-index: 5;
   height: 10px;
@@ -2656,18 +2656,31 @@ td {
   background-color: transparent;
   text-align: center;
 }
+@media screen and (min-width: 60em) {
+  .carousel-indicators {
+    margin: -25px auto 0;
+  }
+}
 .carousel-indicators li {
   background-color: rgba(255, 255, 255, 0.25);
-  border-radius: 5px;
+  border-radius: 15px;
   display: inline-block;
   cursor: pointer;
   float: none;
-  height: 10px;
+  height: 24px;
   text-indent: -999px;
-  width: 10px;
-  margin: 0 1px;
+  width: 24px;
+  margin: 0 5px;
   -webkit-box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 60em) {
+  .carousel-indicators li {
+    border-radius: 5px;
+    height: 10px;
+    width: 10px;
+    margin: 0 1px;
+  }
 }
 .carousel-indicators .active {
   background-color: #f0f0f0;
@@ -2693,7 +2706,12 @@ td {
   margin: 0 0 5px;
 }
 .carousel-caption p {
-  margin-bottom: 0;
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 60em) {
+  .carousel-caption p {
+    margin-bottom: 8px;
+  }
 }
 
 .carousel-caption-text {
