--- a/source/_patterns/04-pages/04-hankesivu-read-mode.mustache
+++ b/source/_patterns/04-pages/04-hankesivu-read-mode.mustache
@@ -324,7 +324,7 @@
           </div>
           <div class="content-item large keywords">
             <div class="helper-container">
-              <span class="icon-help h4" title="Lorem ipsum" placement="top">Asiasanat</span>
+              <span class="icon-help h4" title="Lorem ipsum" placement="top">Asiasanat ja paikkakunnat</span>
               <p class="helper-text small is-vishidden">Lorem ipsum</p>
             </div>
             <ul class="tag-list">
@@ -333,20 +333,12 @@
               </li>
               <li>Turvallisuus</li>
               <li>Esimerkki</li>
-            </ul>
-          </div>
-          <div class="content-item large locations">
-            <div class="helper-container">
-              <span class="icon-help h4" title="Lorem ipsum" placement="top">Paikkakunnat</span>
-              <p class="helper-text small is-vishidden">Lorem ipsum</p>
-            </div>
-            <ul class="tag-list">
               <li>Turku</li>
               <li>Oulu</li>
               <li>Helsinki</li>
               <li>Tampere</li>
             </ul>
-          </div>
+          </div>          
         </div>
       </div>
     </div>
