--- a/source/css/scss/base/_forms.scss
+++ b/source/css/scss/base/_forms.scss
@@ -431,4 +431,56 @@ input[type="search"]::-webkit-search-decoration {
 			margin-right: 5em;
 		}
 	}
+	.fadeout {
+		max-height: 25em;
+	}
+
+	.edit-button{
+		text-align: right;
+
+		&:after{
+			display: inline-block;
+			margin: 0 5px;
+
+			@extend .icon-edit-pen;
+		}
+	}
+
+	.semantic-list {
+		div {
+			@media #{$tablet} {
+				width: 49%;
+				display: inline-block;
+			}
+		}
+	}
+
+	.center {
+		div {
+			margin: 0 auto;
+			padding: 0.5em 0;
+			width: 24em;
+			position: relative;
+
+			input[type="checkbox"] {
+				position: absolute;
+				left: 0;
+				margin-right: 1em;
+				top: 1em;
+			}
+			.terms {
+				display: inline-block;
+				height: 100%;
+				margin-left: 2em;
+				.span {
+					height: 2em;					
+				}
+				input[type="submit"] {
+					display: block;
+					margin-top: 1em;
+					width: 21em;
+				}
+			}			
+		}
+	}
 }
